--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Spaceholder Images</title>
     <link rel="stylesheet" href="assets/css/main.css">
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/main.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -10,9 +12,9 @@
         <h1>Spaceholder Image Generator</h1>
       </header>
       <section class="selector">
-        <input type="number" name="width" title="Width of the image" value="100">
-        <input type="number" name="height" title="Height of the image" value="100">
-        <select name="type">
+        <input type="number" id="inWidth" name="width" title="Width of the image" value="100">
+        <input type="number" id="inHeight" name="height" title="Height of the image" value="100">
+        <select name="type" id="inType">
           <option>JPEG</option>
           <option selected>PNG</option>
           <option>GIF</option>
@@ -20,7 +22,9 @@
       </section>
       <section class="preview">
         <span class="url">http://spacer.viromania.com/100x100.png</span>
-        <img src="http://spacer.viromania.com/100x100.png" alt="100x100" title="100x100">
+        <div class="image">
+          <img src="http://spacer.viromania.com/100x100.png" alt="100x100" title="100x100">
+        </div>
       </section>
     </div>
   </body>
